spl2/hn_tests/failing/euler6-7.hn
hnMain = {
	natr f = 6
	print (natr natr)
}